# ecomerece

backend/: Cargo.toml  Dockerfile  docker-compose.yml
backend/migrations/: 20260309183227_tables_v1.sql  20260312085519_seller_to_sellers.sql
backend/src/: lib.rs  main.rs  persistence.rs  utils.rs
backend/src/domain/: merchant.rs
backend/src/persistence/: create_merchent.rs
