[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.4"
axum = "0.8.8"
dotenvy = "0.15.7"
serde = { version ="1.0.228", features= ["derive"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "time",
]}
tokio = { version = "1.50.0", features= ["full"] }
uuid = "1.21.0"
